# container-status

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: main.rs  models.rs  templates.rs
static/css/: styles.css
templates/: container.html  containers.html  index.html
