[package]
name = "container-status"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12.1", features = ["with-axum", "serde", "serde_json"] }
askama_axum = "0.4.0"
axum = { version = "0.7.5", features = ["macros"] }
rand = "0.8.5"
rs-docker = "0.0.60"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace", "fs"] }
